--- a/src/sass/partials/virtual-select.scss
+++ b/src/sass/partials/virtual-select.scss
@@ -38,11 +38,14 @@
 .vscomp-toggle-button {
   align-items: center;
   background-color: $primary-bg;
-  border: 1px solid $border-color;
+  border: $border-width solid $border-color;
+  border-radius: $border-radius;
   cursor: pointer;
   display: flex;
+  min-height: $min-height;
   padding: 7px $arrow-width 7px 10px;
   position: relative;
+  transition: box-shadow 0.1s;
   width: 100%;
 }
 
@@ -122,7 +125,7 @@
   width: $clear-button-width;
 
   &:hover {
-    background: $focus-color;
+    background: $focus-ring-color;
 
     .vscomp-clear-icon {
       &::before,
@@ -184,13 +187,14 @@
   display: flex;
   flex-wrap: wrap;
   height: $option-height;
+  overflow: hidden;
   padding: 0 15px;
   position: relative;
 
   &.selected {
     background-color: $selected-color;
   }
-
+  
   &.focused {
     background-color: $focus-color;
   }
@@ -462,7 +466,9 @@
   &.focused,
   &:focus {
     .vscomp-toggle-button {
-      box-shadow: $box-shadow1;
+      border-color: $focus-border-color;
+      box-shadow: 0 0 0 0.25rem $focus-ring-color;
+      outline: 0;
     }
   }
 
@@ -475,7 +481,7 @@
 
   &:not(.has-value) {
     .vscomp-value {
-      opacity: 0.5;
+      opacity: 1;
     }
   }
 
