Removed Popup Hide Delay, Updated Styles

--- a/src/sass/partials/variable.scss
+++ b/src/sass/partials/variable.scss
@@ -3,12 +3,13 @@ $primary-bg: var(--bs-body-bg, #fff);
 $font-color: var(--bs-body-color, #333);
 $font-color-light: #666;
 $error-color: var(--bs-danger, #b00020);
+$error-rgb: var(--bs-danger-rgb, rgb(176, 0, 32));
 $border-color: var(--bs-border-color, #ddd);
-$focus-color: #ccc;
-$selected-color: #eee;
-$arrow-color: #000;
+$focus-color: var(--bs-dark-bg-subtle, #ccc);
+$selected-color: var(--bs-primary-bg-subtle, #eee);
+$arrow-color: var(--bs-body-color, #333);
 $checkbox-color: #888;
-$icon-hover-color: #333;
+$icon-hover-color: var(--bs-body-color, #333);
 $overlay-bg: rgba(0, 0, 0, 0.5);
 $focus-ring-color: var(--bs-focus-ring-color);
 $focus-border-color: #86b7fe;
